--- a/ProjetoReintegrar/src/main/resources/application.properties
+++ b/ProjetoReintegrar/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/projeto_reintegrar_dev?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=1q2w3e
+spring.datasource.password=picapau3
 spring.jpa.show-sql=true
